# agents-fleet-hub

./: AGENTS.md  README.md
.agents/skills/impeccable/: SKILL.md
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: docs-reminder.sh
.github/workflows/: release.yml  server-release.yml
docs/: architecture.md  backlog.html  backlog.md  changelog.md  cloudcli-server-issues.md  feature-parity.html  feature-parity.md  installation-simplicity.md  releasing.md  sidebar-readability-proposal.html
fleet-hub/: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
fleet-hub/src/: App.tsx  index.css  main.tsx  react-syntax-highlighter.d.ts  types.ts
fleet-hub/src-tauri/: Cargo.toml  tauri.conf.json
fleet-hub/src-tauri/icons/: icon.icns
fleet-hub/src-tauri/src/: main.rs
fleet-hub/src/components/: AuthedImage.tsx  BacklogPage.tsx  ChatPane.tsx  CodeEditor.tsx  Diff.tsx  FileBrowser.tsx  FileTree.tsx  GitPanel.tsx  LoginModal.tsx  Markdown.tsx  Messages.tsx  OfflineCard.tsx  PlanPanel.tsx  ProjectPane.tsx  SearchOverlay.tsx  SessionList.tsx  SessionRow.tsx  SettingsPanel.tsx  Sidebar.tsx  (+1 more)
fleet-server/: .gitignore  NOTICE  README.md  THIRD-PARTY-NOTICES.md  UPSTREAM.md  package.json
fleet-server/docs/: bun-port-notes.md
fleet-server/packaging/: fleet-server.rb  fleet-server.service  io.github.pfedotovsky.fleet-server.plist
fleet-server/scripts/: build.ts  generate-hub-assets.ts  install.sh  licenses.ts
fleet-server/server/: claude-sdk.js  cli.js  hub-assets.js  index.js  load-env.js  openai-codex.js  tsconfig.json
(+50 files in other folders)
