[package]
name = "agents-hub"
version = "0.1.2"
description = "Control coding agents running on remote CloudCLI hosts"
authors = ["pfedotovsky"]
edition = "2021"

[lib]
name = "agents_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
